changed href to https link to see if it fetches css code from repo

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <title>~Hello Jake~</title>
         
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
-        <link rel="stylesheet" type="text/css" href="css/color.css" />
+        <link rel="stylesheet" type="text/css" href="https://github.com/jimber404/Startpage-X1/css/color.css" />
+        <link rel="stylesheet" type="text/css" href="https://github.com/jimber404/Startpage-X1/css/style.css" />
         
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     </head>
