--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             
             <div class="content">
                 <a class="link1" target="_blank" rel="noopener noreferrer"  href="https://www.4chan.org/">4chan</a>
-                <a class="link2" href="https://www.youtube.com/">YouTube</a>
-                <a class="link3" href="https://calendar.google.com/calendar/r">Calendar</a>
-                <a class="link4" href="https://mail.google.com/mail/u/0/#inbox">Email</a>
+                <a class="link2" target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/">YouTube</a>
+                <a class="link3" target="_blank" rel="noopener noreferrer" href="https://calendar.google.com/calendar/r">Calendar</a>
+                <a class="link4" target="_blank" rel="noopener noreferrer" href="https://mail.google.com/mail/u/0/#inbox">Email</a>
             </div>
         </div>
     </body>
